# NestedETER

./: .gitignore  README.md  compute_corpus_metrics.py  compute_nested_substitution_cost.py  evaluation_report.txt  exhaustive_test.py  generate_artificial_samples.py  json_to_pkl.py  pyproject.toml  run_evaluation.sh  simple_tests.py  time_measurement_evaluation.sh  word_to_char_bio.py
char_hypotheses/: artificial_1.pkl
char_labels/: artificial_1.pkl
hypotheses/: 462m.pkl  724m.pkl  CG-L_219.pkl  NA-ACK_13110616_00066_r.pkl  NA-ACK_13210602_00092_r.pkl  NA-ACK_13210611_00095_r.pkl  NA-ACK_13270405_00124_r.pkl  NA-ACK_13270720_00128_r.pkl  NA-ACK_13481221_00322_r.pkl  NA-ACK_13490217_00327_r.pkl  NA-ACK_13530824_00418_r.pkl  NA-ACK_13531029_00423_r.pkl  NA-ACK_13531029_00425_r.pkl  NA-ACK_13540108_00455_r.pkl  NA-ACK_13550309_00471_r.pkl  NA-ACK_13570628_00617_r.pkl  NA-ACK_13600107_00712_r.pkl  NA-ACK_13601123_00753_r.pkl  NA-ACK_13660618_00961_r.pkl  NA-ACK_13671204_00999_r.pkl  NA-ACK_13740629_01159_r.pkl  NA-ACK_14060104_01400_r.pkl  NA-ACK_14230111_01501_r.pkl  NA-ACK_14310602_01527_r.pkl  NA-ACK_14361118_01546_r.pkl  NA-ACK_14390604_01560_M.pkl  NA-ACK_14540306_01588_M.pkl  NA-ACK_14611216_01686_r.pkl  NA-ACK_14620617_01690_r.pkl  NA-AZK-Chotesov_14270501_2158_r.pkl  NA-AZK-Chotesov_14311109_2166_r.pkl  NA-AZK-Chotesov_14370704_2173_r.pkl  NA-AZK-Jiri_12241011_205_r.pkl  NA-AZK-Plasy_1183ca~11839999_579_r.pkl  NA-AZK-Plasy_1193~11939999_585_r.pkl  NA-CG-L_14280217_201_r.pkl  NA-CG-L_14290718_204_r.pkl  NA-CG-L_14330730_216_r.pkl  NA-CG-L_14350304_223_r.pkl  (+5 more)
(+47 files in other folders)
